tests/baselines/reference/project/intReferencingExtAndInt/node/intReferencingExtAndInt.errors.txt
internal2.ts(2,21): error TS1147: Import declarations in a namespace cannot reference a module.
internal2.ts(2,21): error TS2792: Cannot find module 'external2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== internal2.ts (2 errors) ====
    module outer {
    	import g = require("external2")
    	                   ~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
    	                   ~~~~~~~~~~~
!!! error TS2792: Cannot find module 'external2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    	export var a = g.square(5);
    	export var b = "foo";
    }